# gemini-classifier

./: .env.example  .gitignore  README.md  baseline.py  benchmark.py  classify.py  merge.py  prompt_contract.py  pyproject.toml  schema.py  vercel.json
input/: manifest.jsonl  sample_reviews.jsonl  sample_reviews_gemini_cache.jsonl  sample_reviews_labels.jsonl
prompts/: app_reviews.md  system.md
scripts/: fetch_reviews.py  import_ripple_reviews.py
web/: README.md  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/baseline/: route.ts
web/app/api/classify/: route.ts
web/components/: benchmark-banner.tsx  result-card.tsx
web/components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx
web/lib/: baseline-cache.json  benchmark-report.ts  gemini.ts  heuristic.ts  samples.ts  types.ts
